--- a/teamproject/src/main/webapp/css/division_main.css
+++ b/teamproject/src/main/webapp/css/division_main.css
@@ -7,6 +7,7 @@
 section{
 	width: 100%;
 	text-align: center;
+	background-color: rgb(221, 245, 253);
 }
 section .d_menu{
 	width: 100%;
@@ -26,11 +27,19 @@ section .d_menu ul li:nth-child(2n){
 }
 section h1{
 	font-size: 36px;
+	margin-bottom: 30px;
 }
 section .p_info{
 	width: 275px;
+	height: 350px;
 	float: left;
+	margin: calc((100% - 1100px) / 8);
 }
 section .p_info .img_box{
+	width: 280px;
+	height: 280px;
+}
+section .p_info .img_box img{
 	width: 100%;
+	height: 100%;
 }
