--- a/teamproject/src/main/webapp/css/division_mobile.css
+++ b/teamproject/src/main/webapp/css/division_mobile.css
@@ -1,37 +1,36 @@
 @charset "UTF-8";
-@media all and (max-width: 747px){
+@media all and (max-width: 767px){
 	.wrap{
 		width: 100%;
 		min-width: 320px;
 	}
-	section .d_menu{
-		margin-top: 100px;
+	section{
+		margin-top: 120px;
 	}
 	section .d_menu ul{
-		margin: 10px 5% 10px 0;
+		margin: 3% 90px 3% 0;
 	}
 	section .d_menu ul:nth-child(2){
-		margin: 10px 0 10px 5%;
+		margin: 3% 0 3% 90px;
 	}
 	section .d_menu ul li{
-		font-size:18px;
+		font-size:24px;
 	}
 	section h1{
 		font-size: 36px;
-		margin: 10px 0;
 	}
 	section .p_info{
 		width: 40%;
-		margin: 5%;
+		float: left;
+		margin: calc((100% - 1100px) / 8);
 	}
 	section .p_info .img_box{
 		width: 100%;
+		padding: 10px;
+		box-sizing: border-box;
 	}
 	section .p_info .img_box img{
-		width: 100%;	
+		width: 100%;
 		height: auto;
-	}
-	section .p_info .exp_text{
-		height: 7	0px;
 	}
 }
