--- a/teamproject/src/main/webapp/css/division_pc.css
+++ b/teamproject/src/main/webapp/css/division_pc.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
-@media all and (min-width: 748px){
+@media all and (min-width: 768px){
 	.wrap{
 		width: 1200px;
+		min-height: 1400px;
 	}
 	section .d_menu{
-		margin-top: 100px;
+		padding-top: 80px;
 	}
 	section .d_menu ul{
 		margin: 20px 90px 20px 0;
@@ -21,23 +22,23 @@
 	}
 	section h1{
 		font-size: 36px;
-		margin: 10px 0;
 	}
 	section .p_info{
 		width: 275px;
-		height: 300px;
+		height: 350px;
 		margin: calc((100% - 1100px) / 8);
+		border: 1px solid lightgray;
+		box-sizing: border-box;
+	}
+	section .p_info:hover{
+		border: 1px solid black;
 	}
 	section .p_info .img_box{
 		width: 100%;
-		padding: 10px;
-		box-sizing: border-box;
+		height: 250px;
 	}
 	section .p_info .img_box img{
-		width: 275px;
-		height: auto;
-	}
-	section .p_info .exp_text{
-		height: 70px;
+		width: 100%;
+		height: 100%;
 	}
 }
